--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "netlify-cli": "^14.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11"
   }
 }
